--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -90,6 +90,7 @@ PACKAGE = @PACKAGE@
 PARAGUI_CFLAGS = @PARAGUI_CFLAGS@
 PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
+PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SDLMM_CONFIG = @SDLMM_CONFIG@
 SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
@@ -98,6 +99,8 @@ SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
 SGML2MAN = @SGML2MAN@
+SIGC_CFLAGS = @SIGC_CFLAGS@
+SIGC_LIBS = @SIGC_LIBS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
