--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.16 2004-01-16 15:33:49 mbickel Exp $
+## $Id: Makefile.am,v 1.17 2004-01-16 21:17:25 mbickel Exp $
 
 vpath %.cpp ../..
 
@@ -10,12 +10,13 @@ INCLUDES		= -I$(top_builddir) -I$(top_src_dir) \
 			  -I$(top_builddir)/source -I$(top_src_dir)/source
 
 AM_CXXFLAGS 		= @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ \
--Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@
+-Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@ @SIGC_CFLAGS@
 
-bin_PROGRAMS 		= asc_mapedit asc_map2pcx
+bin_PROGRAMS 		= asc_mapedit
+#asc_map2pcx
 
 asc_mapedit_SOURCES 	= edevents.cpp edgen.cpp edglobal.cpp edmain.cpp \
-edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp \
+edselfnt.cpp edmisc.cpp typen.cpp strtmesg.cpp stack.cpp \
 spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp \
 loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp \
 attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp \
@@ -26,12 +27,14 @@ vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
 terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
 stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
 textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
-mappolygons.cpp prehistoricevents.cpp gameevents.cpp
+mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
+gameevent_dialogs.cpp 
 
 asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
-$(top_builddir)/source/libs/triangul/libtriangul.la @SDLMM_LIBS@ @LDADDLIBBZ2@ $(PARAGUI_LIBS)
+$(top_builddir)/source/libs/triangul/libtriangul.la @SDLMM_LIBS@ @LDADDLIBBZ2@ \
+$(PARAGUI_LIBS) $(SIGC_LIBS)
 
-asc_map2pcx_SOURCES	= map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp \
+asc_map2pcx_SOURCES	= map2pcx.cpp typen.cpp strtmesg.cpp \
 stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
 loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
 basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
@@ -42,10 +45,12 @@ vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
 terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
 stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
 textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
-mappolygons.cpp prehistoricevents.cpp gameevents.cpp
+mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
+gameevent_dialogs.cpp 
 
 asc_map2pcx_LDADD   	= $(top_builddir)/source/libs/triangul/libtriangul.la \
-$(top_builddir)/source/sdl/libsdl.la @SDLMM_LIBS@ @LDADDLIBBZ2@ $(PARAGUI_LIBS)
+$(top_builddir)/source/sdl/libsdl.la @SDLMM_LIBS@ @LDADDLIBBZ2@ $(PARAGUI_LIBS) \
+$(SIGC_LIBS)
 
 # vim: noexpandtab ai
 
