--- a/source/unix/Makefile.in
+++ b/source/unix/Makefile.in
@@ -89,6 +89,7 @@ PACKAGE = @PACKAGE@
 PARAGUI_CFLAGS = @PARAGUI_CFLAGS@
 PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
+PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SDLMM_CONFIG = @SDLMM_CONFIG@
 SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
@@ -97,6 +98,8 @@ SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
 SGML2MAN = @SGML2MAN@
+SIGC_CFLAGS = @SIGC_CFLAGS@
+SIGC_LIBS = @SIGC_LIBS@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
@@ -113,14 +116,14 @@ INCLUDES = -I$(top_builddir) -I$(top_src_dir) \
 SUBDIRS = mapeditor
 
 AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ \
--Dsgmain  -DNEWKEYB @PARAGUI_CFLAGS@
+-Dsgmain  -DNEWKEYB @PARAGUI_CFLAGS@  @SIGC_CFLAGS@
 
 
 bin_PROGRAMS = asc
 
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp \
+asc_SOURCES = unitctrl.cpp soundList.cpp typen.cpp \
 strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp \
-newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp \
+newfont.cpp network.cpp misc.cpp loadpcxc.cpp loaders.cpp \
 loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp \
 building.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp \
 PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp \
@@ -130,13 +133,14 @@ mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp \
 vehicle.cpp buildings.cpp networkdata.cpp textfileparser.cpp terraintype.cpp \
 objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp music.cpp \
 messages.cpp paradialog.cpp textfile_evaluation.cpp containerbasetype.cpp messagedlg.cpp \
-simplestream.cpp
+simplestream.cpp mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
+gameevent_dialogs.cpp  
 
 
 asc_LDADD = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la \
 $(top_builddir)/source/sdl/libsdl.la @PARAGUI_LIBS@ \
-@LDADDLIBBZ2@ 
+@LDADDLIBBZ2@  @SIGC_LIBS@
 
 subdir = source/unix
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -145,11 +149,10 @@ CONFIG_CLEAN_FILES =
 bin_PROGRAMS = asc$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_asc_OBJECTS = unitctrl.$(OBJEXT) soundList.$(OBJEXT) \
-	weather.$(OBJEXT) typen.$(OBJEXT) strtmesg.$(OBJEXT) \
-	stack.$(OBJEXT) spfst.$(OBJEXT) sgstream.$(OBJEXT) sg.$(OBJEXT) \
-	pd.$(OBJEXT) palette.$(OBJEXT) newfont.$(OBJEXT) \
-	network.$(OBJEXT) missions.$(OBJEXT) misc.$(OBJEXT) \
+am_asc_OBJECTS = unitctrl.$(OBJEXT) soundList.$(OBJEXT) typen.$(OBJEXT) \
+	strtmesg.$(OBJEXT) stack.$(OBJEXT) spfst.$(OBJEXT) \
+	sgstream.$(OBJEXT) sg.$(OBJEXT) pd.$(OBJEXT) palette.$(OBJEXT) \
+	newfont.$(OBJEXT) network.$(OBJEXT) misc.$(OBJEXT) \
 	loadpcxc.$(OBJEXT) loaders.$(OBJEXT) loadbi3.$(OBJEXT) \
 	gui.$(OBJEXT) gamedlg.$(OBJEXT) dlg_box.$(OBJEXT) \
 	dialog.$(OBJEXT) controls.$(OBJEXT) building.$(OBJEXT) \
@@ -168,7 +171,10 @@ am_asc_OBJECTS = unitctrl.$(OBJEXT) soundList.$(OBJEXT) \
 	itemrepository.$(OBJEXT) stringtokenizer.$(OBJEXT) \
 	music.$(OBJEXT) messages.$(OBJEXT) paradialog.$(OBJEXT) \
 	textfile_evaluation.$(OBJEXT) containerbasetype.$(OBJEXT) \
-	messagedlg.$(OBJEXT) simplestream.$(OBJEXT)
+	messagedlg.$(OBJEXT) simplestream.$(OBJEXT) \
+	mappolygons.$(OBJEXT) prehistoricevents.$(OBJEXT) \
+	gameevents.$(OBJEXT) gameeventsystem.$(OBJEXT) \
+	gameevent_dialogs.$(OBJEXT)
 asc_OBJECTS = $(am_asc_OBJECTS)
 asc_DEPENDENCIES = $(top_builddir)/source/libs/triangul/libtriangul.la \
 	$(top_builddir)/source/ai/libai.la \
@@ -194,21 +200,26 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/containerbasetype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/controls.Po ./$(DEPDIR)/dashboard.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dialog.Po ./$(DEPDIR)/dlg_box.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/gamedlg.Po ./$(DEPDIR)/gamemap.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/gameoptions.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gamedlg.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gameevent_dialogs.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gameevents.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gameeventsystem.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gamemap.Po ./$(DEPDIR)/gameoptions.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/graphicset.Po ./$(DEPDIR)/gui.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/itemrepository.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/loadbi3.Po ./$(DEPDIR)/loaders.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/loadpcxc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/mapalgorithms.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/mapdisplay.Po ./$(DEPDIR)/messagedlg.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/messages.Po ./$(DEPDIR)/misc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/missions.Po ./$(DEPDIR)/music.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/mapdisplay.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/mappolygons.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/messagedlg.Po ./$(DEPDIR)/messages.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/misc.Po ./$(DEPDIR)/music.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/network.Po ./$(DEPDIR)/networkdata.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/newfont.Po ./$(DEPDIR)/objecttype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/palette.Po ./$(DEPDIR)/paradialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/password.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/password_dialog.Po ./$(DEPDIR)/pd.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/prehistoricevents.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/replay.Po ./$(DEPDIR)/research.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/resourcenet.Po ./$(DEPDIR)/sg.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/sgstream.Po ./$(DEPDIR)/simplestream.Po \
@@ -220,8 +231,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/textfiletags.Po ./$(DEPDIR)/typen.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/unitctrl.Po ./$(DEPDIR)/vehicle.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/vehicletype.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/viewcalculation.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/weather.Po
+@AMDEP_TRUE@	./$(DEPDIR)/viewcalculation.Po
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 LTCXXCOMPILE = $(LIBTOOL) --mode=compile $(CXX) $(DEFS) \
@@ -308,6 +318,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dlg_box.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamedlg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameevent_dialogs.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameevents.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameeventsystem.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamemap.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameoptions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphicset.Po@am__quote@
@@ -318,10 +331,10 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/loadpcxc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mapalgorithms.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mapdisplay.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mappolygons.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/messagedlg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/messages.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/missions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/music.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/networkdata.Po@am__quote@
@@ -332,6 +345,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/password.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/password_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pd.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/prehistoricevents.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replay.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/research.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/resourcenet.Po@am__quote@
@@ -352,7 +366,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicle.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicletype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/viewcalculation.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/weather.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
