--- a/source/libs/Makefile.in
+++ b/source/libs/Makefile.in
@@ -91,9 +91,6 @@ PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
-SDLMM_CONFIG = @SDLMM_CONFIG@
-SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
-SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
@@ -108,7 +105,7 @@ asc_version = @asc_version@
 install_sh = @install_sh@
 MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS = triangul @LIBBZ2@
+SUBDIRS = triangul sdlmm @LIBBZ2@
 subdir = source/libs
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
