--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -1,15 +1,14 @@
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
-AM_CFLAGS   = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@
+AM_CFLAGS   = @SDL_CFLAGS@ 
 
 noinst_LTLIBRARIES	= libsdl.la
 
 libsdl_la_SOURCES 	= sound.cpp graphics.cpp events.cpp SDLStretch.cpp \
 loadimage.cpp asc_IMG_jpg.c
-libsdl_la_LIBADD	= @SDL_LIBS@ @SDLMM_LIBS@ -lSDL_image -lSDL_mixer \
--ljpeg
+libsdl_la_LIBADD	= @SDL_LIBS@ -lSDL_image -lSDL_mixer -ljpeg
 
 
 
