--- a/source/ai/Makefile.am
+++ b/source/ai/Makefile.am
@@ -1,11 +1,11 @@
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-AM_CXXFLAGS		= @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ @SIGC_CFLAGS@ -Dsgmain
+AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@ -Dsgmain
 
 noinst_LTLIBRARIES 	= libai.la
 
 libai_la_SOURCES	= base.cpp misc.cpp strategy.cpp valuation.cpp \
 buildingcapture.cpp service.cpp tactics.cpp
-libai_la_LIBADD		= @SDL_LIBS@ @SDLMM_LIBS@
+libai_la_LIBADD		= @SDL_LIBS@ 
 
