--- a/source/ai/Makefile.in
+++ b/source/ai/Makefile.in
@@ -91,9 +91,6 @@ PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
-SDLMM_CONFIG = @SDLMM_CONFIG@
-SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
-SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
@@ -109,14 +106,14 @@ install_sh = @install_sh@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ @SIGC_CFLAGS@ -Dsgmain
+AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ -Dsgmain
 
 noinst_LTLIBRARIES = libai.la
 
 libai_la_SOURCES = base.cpp misc.cpp strategy.cpp valuation.cpp \
 buildingcapture.cpp service.cpp tactics.cpp
 
-libai_la_LIBADD = @SDL_LIBS@ @SDLMM_LIBS@
+libai_la_LIBADD = @SDL_LIBS@ 
 subdir = source/ai
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
