--- a/source/sdl/Makefile.in
+++ b/source/sdl/Makefile.in
@@ -91,9 +91,6 @@ PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
-SDLMM_CONFIG = @SDLMM_CONFIG@
-SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
-SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
@@ -109,17 +106,15 @@ install_sh = @install_sh@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
-AM_CFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@
+AM_CFLAGS = @SDL_CFLAGS@ 
 
 noinst_LTLIBRARIES = libsdl.la
 
 libsdl_la_SOURCES = sound.cpp graphics.cpp events.cpp SDLStretch.cpp \
 loadimage.cpp asc_IMG_jpg.c
 
-libsdl_la_LIBADD = @SDL_LIBS@ @SDLMM_LIBS@ -lSDL_image -lSDL_mixer \
--ljpeg
-
+libsdl_la_LIBADD = @SDL_LIBS@ -lSDL_image -lSDL_mixer -ljpeg
 subdir = source/sdl
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
