--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -93,9 +93,6 @@ PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
-SDLMM_CONFIG = @SDLMM_CONFIG@
-SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
-SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
@@ -115,57 +112,39 @@ INCLUDES = -I $(top_builddir) -I$(top_src_dir) \
 -I$(top_builddir)/source -I$(top_src_dir)/source
 
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ -Dconverter @SIGC_CFLAGS@
+AM_CXXFLAGS = @SDL_CFLAGS@ -Dconverter @SIGC_CFLAGS@
 
 bin_PROGRAMS = asc_demount \
 			asc_mount \
 			asc_makegfx \
-			asc_viewid \
-			asc_bin2text \
-			asc_weaponguide \
-			asc_raw2pcx
+			asc_weaponguide 
 
 
+#			asc_viewid \
+#			asc_bin2text \
+#			asc_raw2pcx
 asc_demount_SOURCES = demount.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp strtmesg.cpp stringtokenizer.cpp
 asc_mount_SOURCES = mount.cpp        basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp strtmesg.cpp stringtokenizer.cpp
-asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
-asc_viewid_SOURCES = viewid.cpp       basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_raw2pcx_SOURCES = raw2pcx.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
+asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp   terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
+#asc_viewid_SOURCES      = viewid.cpp       basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp  terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
+#asc_bin2text_SOURCES    = bin2text.cpp     basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp  terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
+asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp   terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
 
-asc_mount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_demount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_makegfx_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_viewid_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_bin2text_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_weaponguide_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_raw2pcx_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+#asc_raw2pcx_SOURCES     = raw2pcx.cpp      basestrm.cpp simplestream.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp  terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp research.cpp itemrepository.cpp
+asc_mount_LDADD = @SDL_LIBS@  @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_demount_LDADD = @SDL_LIBS@  @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_makegfx_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
+#asc_viewid_LDADD      = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+#asc_bin2text_LDADD    = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_weaponguide_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 subdir = source/tools/linux
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 bin_PROGRAMS = asc_demount$(EXEEXT) asc_mount$(EXEEXT) \
-	asc_makegfx$(EXEEXT) asc_viewid$(EXEEXT) asc_bin2text$(EXEEXT) \
-	asc_weaponguide$(EXEEXT) asc_raw2pcx$(EXEEXT)
+	asc_makegfx$(EXEEXT) asc_weaponguide$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_asc_bin2text_OBJECTS = bin2text.$(OBJEXT) basestrm.$(OBJEXT) \
-	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
-	loadpcxc.$(OBJEXT) palette.$(OBJEXT) sgstream.$(OBJEXT) \
-	newfont.$(OBJEXT) basegfx.$(OBJEXT) graphicset.$(OBJEXT) \
-	gameoptions.$(OBJEXT) CLoadable.$(OBJEXT) Named.$(OBJEXT) \
-	Property.$(OBJEXT) PropertyGroup.$(OBJEXT) stack.$(OBJEXT) \
-	buildingtype.$(OBJEXT) typen.$(OBJEXT) vehicletype.$(OBJEXT) \
-	password.$(OBJEXT) strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
-	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
-	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
-	itemrepository.$(OBJEXT)
-asc_bin2text_OBJECTS = $(am_asc_bin2text_OBJECTS)
-asc_bin2text_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_bin2text_LDFLAGS =
 am_asc_demount_OBJECTS = demount.$(OBJEXT) basestrm.$(OBJEXT) \
 	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
 	strtmesg.$(OBJEXT) stringtokenizer.$(OBJEXT)
@@ -183,10 +162,12 @@ am_asc_makegfx_OBJECTS = makegfx.$(OBJEXT) basestrm.$(OBJEXT) \
 	password.$(OBJEXT) strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
 	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
 	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
-	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT)
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
+	research.$(OBJEXT) itemrepository.$(OBJEXT)
 asc_makegfx_OBJECTS = $(am_asc_makegfx_OBJECTS)
 asc_makegfx_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/tools/lib/libasc_cmd.la
+	$(top_builddir)/source/tools/lib/libasc_cmd.la \
+	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 asc_makegfx_LDFLAGS =
 am_asc_mount_OBJECTS = mount.$(OBJEXT) basestrm.$(OBJEXT) \
 	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
@@ -194,37 +175,6 @@ am_asc_mount_OBJECTS = mount.$(OBJEXT) basestrm.$(OBJEXT) \
 asc_mount_OBJECTS = $(am_asc_mount_OBJECTS)
 asc_mount_DEPENDENCIES = $(top_builddir)/source/tools/lib/libasc_cmd.la
 asc_mount_LDFLAGS =
-am_asc_raw2pcx_OBJECTS = raw2pcx.$(OBJEXT) basestrm.$(OBJEXT) \
-	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
-	loadpcxc.$(OBJEXT) palette.$(OBJEXT) sgstream.$(OBJEXT) \
-	newfont.$(OBJEXT) basegfx.$(OBJEXT) graphicset.$(OBJEXT) \
-	gameoptions.$(OBJEXT) CLoadable.$(OBJEXT) Named.$(OBJEXT) \
-	Property.$(OBJEXT) PropertyGroup.$(OBJEXT) stack.$(OBJEXT) \
-	buildingtype.$(OBJEXT) typen.$(OBJEXT) vehicletype.$(OBJEXT) \
-	password.$(OBJEXT) strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
-	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
-	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT)
-asc_raw2pcx_OBJECTS = $(am_asc_raw2pcx_OBJECTS)
-asc_raw2pcx_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_raw2pcx_LDFLAGS =
-am_asc_viewid_OBJECTS = viewid.$(OBJEXT) basestrm.$(OBJEXT) \
-	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
-	loadpcxc.$(OBJEXT) palette.$(OBJEXT) sgstream.$(OBJEXT) \
-	newfont.$(OBJEXT) basegfx.$(OBJEXT) graphicset.$(OBJEXT) \
-	gameoptions.$(OBJEXT) CLoadable.$(OBJEXT) Named.$(OBJEXT) \
-	Property.$(OBJEXT) PropertyGroup.$(OBJEXT) stack.$(OBJEXT) \
-	buildingtype.$(OBJEXT) typen.$(OBJEXT) vehicletype.$(OBJEXT) \
-	password.$(OBJEXT) strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
-	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
-	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
-	itemrepository.$(OBJEXT)
-asc_viewid_OBJECTS = $(am_asc_viewid_OBJECTS)
-asc_viewid_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/tools/lib/libasc_cmd.la
-asc_viewid_LDFLAGS =
 am_asc_weaponguide_OBJECTS = weaponguide.$(OBJEXT) basestrm.$(OBJEXT) \
 	simplestream.$(OBJEXT) misc.$(OBJEXT) ascstring.$(OBJEXT) \
 	loadpcxc.$(OBJEXT) palette.$(OBJEXT) sgstream.$(OBJEXT) \
@@ -236,10 +186,11 @@ am_asc_weaponguide_OBJECTS = weaponguide.$(OBJEXT) basestrm.$(OBJEXT) \
 	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
 	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
 	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
-	itemrepository.$(OBJEXT)
+	research.$(OBJEXT) itemrepository.$(OBJEXT)
 asc_weaponguide_OBJECTS = $(am_asc_weaponguide_OBJECTS)
 asc_weaponguide_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/tools/lib/libasc_cmd.la
+	$(top_builddir)/source/tools/lib/libasc_cmd.la \
+	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 asc_weaponguide_LDFLAGS =
 
 DEFS = @DEFS@
@@ -253,8 +204,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/Property.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/PropertyGroup.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/ascstring.Po ./$(DEPDIR)/basegfx.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/basestrm.Po ./$(DEPDIR)/bin2text.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/buildingtype.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/basestrm.Po ./$(DEPDIR)/buildingtype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/containerbasetype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/demount.Po ./$(DEPDIR)/gameoptions.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/graphicset.Po \
@@ -263,14 +213,14 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/misc.Po ./$(DEPDIR)/mount.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/newfont.Po ./$(DEPDIR)/objecttype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/palette.Po ./$(DEPDIR)/password.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/raw2pcx.Po ./$(DEPDIR)/sgstream.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/research.Po ./$(DEPDIR)/sgstream.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/simplestream.Po ./$(DEPDIR)/stack.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/stringtokenizer.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/strtmesg.Po ./$(DEPDIR)/terraintype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/textfile_evaluation.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/textfileparser.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/textfiletags.Po ./$(DEPDIR)/typen.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/vehicletype.Po ./$(DEPDIR)/viewid.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/vehicletype.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/weaponguide.Po
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -281,12 +231,10 @@ CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
 CXXFLAGS = @CXXFLAGS@
-DIST_SOURCES = $(asc_bin2text_SOURCES) $(asc_demount_SOURCES) \
-	$(asc_makegfx_SOURCES) $(asc_mount_SOURCES) \
-	$(asc_raw2pcx_SOURCES) $(asc_viewid_SOURCES) \
-	$(asc_weaponguide_SOURCES)
+DIST_SOURCES = $(asc_demount_SOURCES) $(asc_makegfx_SOURCES) \
+	$(asc_mount_SOURCES) $(asc_weaponguide_SOURCES)
 DIST_COMMON = Makefile.am Makefile.in
-SOURCES = $(asc_bin2text_SOURCES) $(asc_demount_SOURCES) $(asc_makegfx_SOURCES) $(asc_mount_SOURCES) $(asc_raw2pcx_SOURCES) $(asc_viewid_SOURCES) $(asc_weaponguide_SOURCES)
+SOURCES = $(asc_demount_SOURCES) $(asc_makegfx_SOURCES) $(asc_mount_SOURCES) $(asc_weaponguide_SOURCES)
 
 all: all-am
 
@@ -326,9 +274,6 @@ clean-binPROGRAMS:
 	  echo " rm -f $$p $$f"; \
 	  rm -f $$p $$f ; \
 	done
-asc_bin2text$(EXEEXT): $(asc_bin2text_OBJECTS) $(asc_bin2text_DEPENDENCIES) 
-	@rm -f asc_bin2text$(EXEEXT)
-	$(CXXLINK) $(asc_bin2text_LDFLAGS) $(asc_bin2text_OBJECTS) $(asc_bin2text_LDADD) $(LIBS)
 asc_demount$(EXEEXT): $(asc_demount_OBJECTS) $(asc_demount_DEPENDENCIES) 
 	@rm -f asc_demount$(EXEEXT)
 	$(CXXLINK) $(asc_demount_LDFLAGS) $(asc_demount_OBJECTS) $(asc_demount_LDADD) $(LIBS)
@@ -338,12 +283,6 @@ asc_makegfx$(EXEEXT): $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
 asc_mount$(EXEEXT): $(asc_mount_OBJECTS) $(asc_mount_DEPENDENCIES) 
 	@rm -f asc_mount$(EXEEXT)
 	$(CXXLINK) $(asc_mount_LDFLAGS) $(asc_mount_OBJECTS) $(asc_mount_LDADD) $(LIBS)
-asc_raw2pcx$(EXEEXT): $(asc_raw2pcx_OBJECTS) $(asc_raw2pcx_DEPENDENCIES) 
-	@rm -f asc_raw2pcx$(EXEEXT)
-	$(CXXLINK) $(asc_raw2pcx_LDFLAGS) $(asc_raw2pcx_OBJECTS) $(asc_raw2pcx_LDADD) $(LIBS)
-asc_viewid$(EXEEXT): $(asc_viewid_OBJECTS) $(asc_viewid_DEPENDENCIES) 
-	@rm -f asc_viewid$(EXEEXT)
-	$(CXXLINK) $(asc_viewid_LDFLAGS) $(asc_viewid_OBJECTS) $(asc_viewid_LDADD) $(LIBS)
 asc_weaponguide$(EXEEXT): $(asc_weaponguide_OBJECTS) $(asc_weaponguide_DEPENDENCIES) 
 	@rm -f asc_weaponguide$(EXEEXT)
 	$(CXXLINK) $(asc_weaponguide_LDFLAGS) $(asc_weaponguide_OBJECTS) $(asc_weaponguide_LDADD) $(LIBS)
@@ -361,7 +300,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ascstring.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/basegfx.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/basestrm.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bin2text.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buildingtype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/containerbasetype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/demount.Po@am__quote@
@@ -376,7 +314,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/objecttype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/palette.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/password.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/raw2pcx.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/research.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sgstream.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/simplestream.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stack.Po@am__quote@
@@ -388,7 +326,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfiletags.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/typen.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicletype.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/viewid.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/weaponguide.Po@am__quote@
 
 distclean-depend:
@@ -568,6 +505,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 
 
 vpath %.cpp ..:../..
+#asc_raw2pcx_LDADD     = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ @SIGC_LIBS@ $(top_builddir)/source/tools/lib/libasc_cmd.la
 
 # vim: noexpandtab ai
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
