--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.17 2004-01-16 21:17:25 mbickel Exp $
+## $Id: Makefile.am,v 1.18 2004-05-16 15:40:33 mbickel Exp $
 
 vpath %.cpp ../..
 
@@ -9,8 +9,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 INCLUDES		= -I$(top_builddir) -I$(top_src_dir) \
 			  -I$(top_builddir)/source -I$(top_src_dir)/source
 
-AM_CXXFLAGS 		= @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ \
--Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@ @SIGC_CFLAGS@
+AM_CXXFLAGS 		= @SDL_CFLAGS@ -Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@ @SIGC_CFLAGS@
 
 bin_PROGRAMS 		= asc_mapedit
 #asc_map2pcx
@@ -31,26 +30,26 @@ mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
 gameevent_dialogs.cpp 
 
 asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
-$(top_builddir)/source/libs/triangul/libtriangul.la @SDLMM_LIBS@ @LDADDLIBBZ2@ \
-$(PARAGUI_LIBS) $(SIGC_LIBS)
+$(top_builddir)/source/libs/triangul/libtriangul.la @LDADDLIBBZ2@ \
+$(PARAGUI_LIBS) $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 
-asc_map2pcx_SOURCES	= map2pcx.cpp typen.cpp strtmesg.cpp \
-stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
-loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
-basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
-gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
-mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
-password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
-vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
-terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
-stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
-textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
-mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
-gameevent_dialogs.cpp 
+#asc_map2pcx_SOURCES	= map2pcx.cpp typen.cpp strtmesg.cpp \
+#stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
+#loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
+#basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
+#gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
+#mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
+#password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
+#vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
+#terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
+#stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
+#textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
+#mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
+#gameevent_dialogs.cpp 
 
-asc_map2pcx_LDADD   	= $(top_builddir)/source/libs/triangul/libtriangul.la \
-$(top_builddir)/source/sdl/libsdl.la @SDLMM_LIBS@ @LDADDLIBBZ2@ $(PARAGUI_LIBS) \
-$(SIGC_LIBS)
+#asc_map2pcx_LDADD   	= $(top_builddir)/source/libs/triangul/libtriangul.la \
+#$(top_builddir)/source/sdl/libsdl.la  @LDADDLIBBZ2@ $(PARAGUI_LIBS) \
+#$(SIGC_LIBS)
 
 # vim: noexpandtab ai
 
