--- a/source/unix/mapeditor/Makefile.in
+++ b/source/unix/mapeditor/Makefile.in
@@ -93,9 +93,6 @@ PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
-SDLMM_CONFIG = @SDLMM_CONFIG@
-SDLMM_CXXFLAGS = @SDLMM_CXXFLAGS@
-SDLMM_LIBS = @SDLMM_LIBS@
 SDL_CFLAGS = @SDL_CFLAGS@
 SDL_CONFIG = @SDL_CONFIG@
 SDL_LIBS = @SDL_LIBS@
@@ -115,9 +112,7 @@ INCLUDES = -I$(top_builddir) -I$(top_src_dir) \
 			  -I$(top_builddir)/source -I$(top_src_dir)/source
 
 
-AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ \
--Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@ @SIGC_CFLAGS@
-
+AM_CXXFLAGS = @SDL_CFLAGS@ -Dkarteneditor -DNEWKEYB @PARAGUI_CFLAGS@ @SIGC_CFLAGS@
 
 bin_PROGRAMS = asc_mapedit
 
@@ -139,28 +134,8 @@ gameevent_dialogs.cpp
 
 
 asc_mapedit_LDADD = $(top_builddir)/source/sdl/libsdl.la \
-$(top_builddir)/source/libs/triangul/libtriangul.la @SDLMM_LIBS@ @LDADDLIBBZ2@ \
-$(PARAGUI_LIBS) $(SIGC_LIBS)
-
-
-asc_map2pcx_SOURCES = map2pcx.cpp typen.cpp strtmesg.cpp \
-stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
-loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
-basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
-gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
-mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
-password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
-vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
-terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
-stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
-textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
-mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
-gameevent_dialogs.cpp 
-
-
-asc_map2pcx_LDADD = $(top_builddir)/source/libs/triangul/libtriangul.la \
-$(top_builddir)/source/sdl/libsdl.la @SDLMM_LIBS@ @LDADDLIBBZ2@ $(PARAGUI_LIBS) \
-$(SIGC_LIBS)
+$(top_builddir)/source/libs/triangul/libtriangul.la @LDADDLIBBZ2@ \
+$(PARAGUI_LIBS) $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 
 subdir = source/unix/mapeditor
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -196,7 +171,8 @@ am_asc_mapedit_OBJECTS = edevents.$(OBJEXT) edgen.$(OBJEXT) \
 	gameevent_dialogs.$(OBJEXT)
 asc_mapedit_OBJECTS = $(am_asc_mapedit_OBJECTS)
 asc_mapedit_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/libs/triangul/libtriangul.la
+	$(top_builddir)/source/libs/triangul/libtriangul.la \
+	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la
 asc_mapedit_LDFLAGS =
 
 DEFS = @DEFS@
@@ -547,6 +523,24 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 
 
 vpath %.cpp ../..
+
+#asc_map2pcx_SOURCES	= map2pcx.cpp typen.cpp strtmesg.cpp \
+#stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
+#loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
+#basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
+#gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
+#mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
+#password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
+#vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
+#terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
+#stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
+#textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
+#mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
+#gameevent_dialogs.cpp 
+
+#asc_map2pcx_LDADD   	= $(top_builddir)/source/libs/triangul/libtriangul.la \
+#$(top_builddir)/source/sdl/libsdl.la  @LDADDLIBBZ2@ $(PARAGUI_LIBS) \
+#$(SIGC_LIBS)
 
 # vim: noexpandtab ai
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
