--- a/doc/manpages/Makefile.in
+++ b/doc/manpages/Makefile.in
@@ -103,13 +103,12 @@ am__include = @am__include@
 am__quote = @am__quote@
 asc_version = @asc_version@
 install_sh = @install_sh@
-MAINTAINERCLEANFILES = Makefile.in asc.6 asc_bin2text.6 asc_demount.6 \
-asc_mount.6 asc_mapedit.6 asc_makegfx.6 asc_viewid.6 asc_map2pcx.6 \
-asc_weaponguide.6
+MAINTAINERCLEANFILES = Makefile.in asc.6 asc_demount.6 \
+asc_mount.6 asc_mapedit.6 asc_makegfx.6 asc_weaponguide.6
 
 
-man_MANS = asc.6 asc_bin2text.6 asc_demount.6 asc_mount.6 \
-asc_mapedit.6 asc_makegfx.6 asc_viewid.6 asc_map2pcx.6 asc_weaponguide.6
+man_MANS = asc.6 asc_demount.6 asc_mount.6 \
+asc_mapedit.6 asc_makegfx.6  asc_weaponguide.6
 
 subdir = doc/manpages
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -290,9 +289,6 @@ uninstall-man: uninstall-man6
 	mostlyclean-libtool uninstall uninstall-am uninstall-info-am \
 	uninstall-man uninstall-man6
 
-
-%.6: %.sgml
-	@DOCBOOK2MAN@ $< > $@
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
