Made branch compilable under linux

--- a/source/unix/Makefile.in
+++ b/source/unix/Makefile.in
@@ -134,7 +134,7 @@ gameevent_dialogs.cpp statisticdialog.cpp clipboard.cpp
 
 asc_LDADD = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-$(top_builddir)/source/sdl/libsdl.la @PARAGUI_LIBS@ \
+$(top_builddir)/source/sdl/libsdl.la $(top_builddir)/source/graphics/libgraphics.la @PARAGUI_LIBS@ \
 @LDADDLIBBZ2@  @SIGC_LIBS@
 
 subdir = source/unix
@@ -175,7 +175,8 @@ asc_OBJECTS = $(am_asc_OBJECTS)
 asc_DEPENDENCIES = $(top_builddir)/source/libs/triangul/libtriangul.la \
 	$(top_builddir)/source/ai/libai.la \
 	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-	$(top_builddir)/source/sdl/libsdl.la
+	$(top_builddir)/source/sdl/libsdl.la \
+	$(top_builddir)/source/graphics/libgraphics.la
 asc_LDFLAGS =
 
 DEFS = @DEFS@
