--- a/configure.in
+++ b/configure.in
@@ -405,6 +405,7 @@ AC_OUTPUT(  Makefile \
 	    source/libs/sdlmm/src/Makefile \
 	    source/libs/triangul/Makefile \
 	    source/sdl/Makefile \
+	    source/graphics/Makefile \
 	    source/tools/Makefile \
 	    source/tools/lib/Makefile \
 	    source/tools/linux/Makefile \
